Fix some issues/bugs with TextTab's TextArea
- Horizontal ScrollBar was missing.
- When pressing DOWN or UP with no similar elements to select, focus was lost.

--- a/src/main/resources/css/base.css
+++ b/src/main/resources/css/base.css
@@ -112,13 +112,10 @@ Hyperlink {
  *                                                                             *
  ******************************************************************************/
 
-/* Text field */
-#no-vertical-scroll-bar .scroll-pane {
+#no-vertical-scroll-bar .scroll-pane, .text-area#no-vertical-scroll-bar .scroll-pane {
     -fx-vbar-policy: never;
 }
-
-/* Text area */
-.text-area#no-vertical-scroll-bar .scroll-pane {
+.text-area#no-scroll-bar .scroll-pane {
     -fx-vbar-policy: never;
     -fx-hbar-policy: never;
 }
